# qualisys_rust_sdk

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
examples/: rt_udp_6d.rs
src/: bridge.rs  client.rs  error.rs  lib.rs  packet.rs  parameters.rs  prelude.rs  protocol.rs  rt.rs  simulator.rs
tests/: simulator_roundtrip.rs
