[package]
name = "qualisys_rust_sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK foundation for the Qualisys QTM real-time protocol"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qualisys", "qtm", "motion-capture", "sdk", "udp"]
categories = ["network-programming", "science::robotics"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
roxmltree = "0.20"
thiserror = "2.0"
